Flock with backup but backup activity is not linked through out the project

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,8 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=AOFM_Manager
+application.vendor=REUBEN
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,13 +28,14 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/AOFM_Manager.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.javax.mail.jar=C:\\Program Files (x86)\\Java\\jre6\\lib\\ext\\javax.mail.jar
 file.reference.jcalendar-1.4.jar=F:\\E-LEARNING\\javatry\\SimpleLogin\\dist\\lib\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.0.jar=F:\\E-LEARNING\\jfreechart-1.0.1\\lib\\jcommon-1.0.0.jar
 file.reference.jfreechart-1.0.1.jar=F:\\E-LEARNING\\jfreechart-1.0.1\\lib\\jfreechart-1.0.1.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${libs.MySQLDriver.classpath}:\
